// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly PermissionsRequest if camera 1`] = `
<View
  ref={null}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    ref={null}
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "paddingHorizontal": 16,
        },
        {
          "alignContent": "center",
          "justifyContent": "center",
        },
      ]
    }
  >
    <RCTText
      center={true}
    >
      No access to camera
    </RCTText>
    <RCTText
      center={true}
    >
      Please give NMF.earth app access to camera in your phone settings to use this feature.
    </RCTText>
  </View>
  <Button.Secondary
    icon="settings"
    onPress={[Function]}
    style={
      {
        "marginBottom": 20,
        "marginTop": 20,
      }
    }
    text="Open settings"
  />
</View>
`;

exports[`renders correctly PermissionsRequest if notification 1`] = `
<View
  ref={null}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    ref={null}
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "paddingHorizontal": 16,
        },
        {
          "alignContent": "center",
          "justifyContent": "center",
        },
      ]
    }
  >
    <RCTText
      center={true}
    >
      No permission to send notifications
    </RCTText>
    <RCTText
      center={true}
    >
      Please give NMF.earth app permission to send you notifications in your phone settings to use this feature.
    </RCTText>
  </View>
  <Button.Secondary
    icon="settings"
    onPress={[Function]}
    style={
      {
        "marginBottom": 20,
        "marginTop": 20,
      }
    }
    text="Open settings"
  />
</View>
`;
